--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "porfolio_2",
   "version": "1.0.0",
   "description": "my personal portfolio",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "start": "node server.js",
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
@@ -13,5 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1"
+  },
+  "engines": {
+    "node": "14.15.3"
   }
 }
