--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "my personal portfolio",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon server.js",
     "start": "node server.js",
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
@@ -12,9 +13,13 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemailer": "^6.4.18"
   },
   "engines": {
     "node": "14.15.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
